--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.maze{
+#maze{
     border: 1px solid red;
 }
 
-.maze:after{
+#maze:after{
     content: '';
     display: block;
     clear: both;
@@ -12,15 +12,17 @@
     float: left;
     border-color: blue;
     border-width: 1px;
-    width: 100px;
-    height: 100px;
+    width: 40px;
+    height: 40px;
     box-sizing: border-box;
+    text-align: center;
+    font-size: 20px;
 }
 
-.cells[data-down="true"]{
+.cells[data-down="false"]{
     border-bottom-style: solid;
 }
 
-.cells[data-right="true"]{
+.cells[data-right="false"]{
     border-right-style: solid;
 }
